[project]
name = "kyv-project-b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.6",
    "ipython>=9.13.0",
    "langgraph>=1.2.0",
    "pinecone>=9.0.0",
    "pydantic>=2.13.4",
]
